Changed mapper method names.